--- a/index.html
+++ b/index.html
@@ -23,3 +23,146 @@
             </div>
         </div>
     </div>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calendario de Contenidos Mensual</title>
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+        }
+        .header {
+            text-align: center;
+            padding: 20px;
+            background-color: #007BFF;
+            color: white;
+        }
+        .header h1 {
+            margin: 0;
+        }
+        .header p {
+            margin: 5px 0 0;
+        }
+        .semana {
+            margin: 20px;
+            padding: 20px;
+            border-radius: 8px;
+        }
+        .semana:nth-child(odd) { background-color: #e7f3ff; }
+        .semana:nth-child(even) { background-color: #f9f5db; }
+        h2 {
+            margin-top: 0;
+        }
+        .dias {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 10px;
+        }
+        .dia {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 10px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .dia input,
+        .dia textarea {
+            width: 100%;
+            margin-bottom: 8px;
+            padding: 5px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        .objetivos {
+            text-align: center;
+            margin: 30px;
+        }
+        .objetivos input {
+            width: 80%;
+            margin: 10px auto;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            display: block;
+        }
+        .cta {
+            text-align: center;
+            margin: 30px;
+        }
+        .cta button {
+            background-color: #00CE5D;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 8px;
+        }
+        .cta button:hover {
+            background-color: #009E47;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <h1>Calendario de Contenidos Mensual</h1>
+        <p>Escribe y organiza tus contenidos con el calendario interactivo.</p>
+    </div>
+
+    <!-- Reutilizamos esta estructura para las 4 semanas -->
+    <template id="calendario-semana">
+        <div class="dias">
+            <div class="dia">
+                <h3>Lunes</h3>
+                <input placeholder="Fecha (dd/mm/aaaa)">
+                <textarea placeholder="Estado"></textarea>
+                <textarea placeholder="Objetivo"></textarea>
+                <textarea placeholder="Público Objetivo"></textarea>
+                <textarea placeholder="Tipo de Contenido"></textarea>
+                <textarea placeholder="Palabras clave"></textarea>
+                <textarea placeholder="Hashtags"></textarea>
+                <textarea placeholder="Notas"></textarea>
+                <textarea placeholder="Formato"></textarea>
+                <textarea placeholder="CTA"></textarea>
+                <textarea placeholder="Métricas"></textarea>
+            </div>
+            <div class="dia"><h3>Martes</h3><!-- Campos iguales --></div>
+            <div class="dia"><h3>Miércoles</h3><!-- Campos iguales --></div>
+            <div class="dia"><h3>Jueves</h3><!-- Campos iguales --></div>
+            <div class="dia"><h3>Viernes</h3><!-- Campos iguales --></div>
+            <div class="dia"><h3>Sábado</h3><!-- Campos iguales --></div>
+            <div class="dia"><h3>Domingo</h3><!-- Campos iguales --></div>
+        </div>
+    </template>
+
+    <!-- Semana 1 -->
+    <div class="semana" style="background-color: #cce4f7;">
+        <h2>Semana 1</h2>
+        <div class="dias">
+            <div class="dia">
+                <h3>Lunes</h3>
+                <input placeholder="Fecha (dd/mm/aaaa)">
+                <textarea placeholder="Estado"></textarea>
+                <textarea placeholder="Objetivo"></textarea>
+                <textarea placeholder="Público Objetivo"></textarea>
+                <textarea placeholder="Tipo de Contenido"></textarea>
+                <textarea placeholder="Palabras clave"></textarea>
+                <textarea placeholder="Hashtags"></textarea>
+                <textarea placeholder="Notas"></textarea>
+                <textarea placeholder="Formato"></textarea>
+                <textarea placeholder="CTA"></textarea>
+                <textarea placeholder="Métricas"></textarea>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
