--- a/index.html
+++ b/index.html
@@ -1,28 +1,3 @@
-<body>
-    <div class="header">
-        <h1>Calendario de Contenidos Mensual</h1>
-        <p>Escribe y organiza tus contenidos con el calendario interactivo.</p>
-    </div>
-
-    <!-- Reutilizamos esta estructura para las 4 semanas -->
-    <template id="calendario-semana">
-        <div class="dias">
-            <div class="dia">
-                <h3>Lunes</h3>
-                <input placeholder="Fecha (dd/mm/aaaa)">
-                <textarea placeholder="Estado"></textarea>
-                <textarea placeholder="Objetivo"></textarea>
-                <textarea placeholder="Público Objetivo"></textarea>
-                <textarea placeholder="Tipo de Contenido"></textarea>
-                <textarea placeholder="Palabras clave"></textarea>
-                <textarea placeholder="Hashtags"></textarea>
-                <textarea placeholder="Notas"></textarea>
-                <textarea placeholder="Formato"></textarea>
-                <textarea placeholder="CTA"></textarea>
-                <textarea placeholder="Métricas"></textarea>
-            </div>
-        </div>
-    </div>
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -114,55 +89,58 @@
         <p>Escribe y organiza tus contenidos con el calendario interactivo.</p>
     </div>
 
-    <!-- Reutilizamos esta estructura para las 4 semanas -->
-    <template id="calendario-semana">
-        <div class="dias">
-            <div class="dia">
-                <h3>Lunes</h3>
-                <input placeholder="Fecha (dd/mm/aaaa)">
-                <textarea placeholder="Estado"></textarea>
-                <textarea placeholder="Objetivo"></textarea>
-                <textarea placeholder="Público Objetivo"></textarea>
-                <textarea placeholder="Tipo de Contenido"></textarea>
-                <textarea placeholder="Palabras clave"></textarea>
-                <textarea placeholder="Hashtags"></textarea>
-                <textarea placeholder="Notas"></textarea>
-                <textarea placeholder="Formato"></textarea>
-                <textarea placeholder="CTA"></textarea>
-                <textarea placeholder="Métricas"></textarea>
-            </div>
-            <div class="dia"><h3>Martes</h3><!-- Campos iguales --></div>
-            <div class="dia"><h3>Miércoles</h3><!-- Campos iguales --></div>
-            <div class="dia"><h3>Jueves</h3><!-- Campos iguales --></div>
-            <div class="dia"><h3>Viernes</h3><!-- Campos iguales --></div>
-            <div class="dia"><h3>Sábado</h3><!-- Campos iguales --></div>
-            <div class="dia"><h3>Domingo</h3><!-- Campos iguales --></div>
-        </div>
-    </template>
-
     <!-- Semana 1 -->
     <div class="semana" style="background-color: #cce4f7;">
         <h2>Semana 1</h2>
         <div class="dias">
-            <div class="dia">
-                <h3>Lunes</h3>
-                <input placeholder="Fecha (dd/mm/aaaa)">
-                <textarea placeholder="Estado"></textarea>
-                <textarea placeholder="Objetivo"></textarea>
-                <textarea placeholder="Público Objetivo"></textarea>
-                <textarea placeholder="Tipo de Contenido"></textarea>
-                <textarea placeholder="Palabras clave"></textarea>
-                <textarea placeholder="Hashtags"></textarea>
-                <textarea placeholder="Notas"></textarea>
-                <textarea placeholder="Formato"></textarea>
-                <textarea placeholder="CTA"></textarea>
-                <textarea placeholder="Métricas"></textarea>
-            </div>
+            <div class="dia"><h3>Lunes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Martes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Miércoles</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Jueves</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Viernes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Sábado</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Domingo</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
         </div>
     </div>
 
+    <!-- Semana 2 -->
+    <div class="semana" style="background-color: #fff7cc;">
+        <h2>Semana 2</h2>
+        <div class="dias">
+            <!-- Copia idéntica del contenido de Semana 1 -->
+        </div>
+    </div>
 
+    <!-- Semana 3 -->
+    <div class="semana" style="background-color: #d8f7cc;">
+        <h2>Semana 3</h2>
+        <div class="dias">
+            <!-- Copia idéntica del contenido de Semana 1 -->
+        </div>
+    </div>
 
+    <!-- Semana 4 -->
+    <div class="semana" style="background-color: #ffe6cc;">
+        <h2>Semana 4</h2>
+        <div class="dias">
+            <!-- Copia idéntica del contenido de Semana 1 -->
+        </div>
+    </div>
 
+    <!-- Objetivos Futuros -->
+    <div class="objetivos">
+        <h2>Objetivos Futuros</h2>
+        <input placeholder="1. Escribe aquí">
+        <input placeholder="2. Escribe aquí">
+        <input placeholder="3. Escribe aquí">
+    </div>
 
-
+    <!-- CTA -->
+    <div class="cta">
+        <h2>¿CAMPO DE JUEGO O MINA DE ORO?</h2>
+        <a href="https://klicana.work/ykEi0H">
+            <button>UNIRME AHORA A MISIÓN GESTOR REDES SOCIALES</button>
+        </a>
+    </div>
+</body>
+</html>
