--- a/index.html
+++ b/index.html
@@ -107,40 +107,8 @@
     <div class="semana" style="background-color: #fff7cc;">
         <h2>Semana 2</h2>
         <div class="dias">
-            <!-- Copia idéntica del contenido de Semana 1 -->
+            <!-- Contenido idéntico a Semana 1 -->
         </div>
     </div>
 
-    <!-- Semana 3 -->
-    <div class="semana" style="background-color: #d8f7cc;">
-        <h2>Semana 3</h2>
-        <div class="dias">
-            <!-- Copia idéntica del contenido de Semana 1 -->
-        </div>
-    </div>
-
-    <!-- Semana 4 -->
-    <div class="semana" style="background-color: #ffe6cc;">
-        <h2>Semana 4</h2>
-        <div class="dias">
-            <!-- Copia idéntica del contenido de Semana 1 -->
-        </div>
-    </div>
-
-    <!-- Objetivos Futuros -->
-    <div class="objetivos">
-        <h2>Objetivos Futuros</h2>
-        <input placeholder="1. Escribe aquí">
-        <input placeholder="2. Escribe aquí">
-        <input placeholder="3. Escribe aquí">
-    </div>
-
-    <!-- CTA -->
-    <div class="cta">
-        <h2>¿CAMPO DE JUEGO O MINA DE ORO?</h2>
-        <a href="https://klicana.work/ykEi0H">
-            <button>UNIRME AHORA A MISIÓN GESTOR REDES SOCIALES</button>
-        </a>
-    </div>
-</body>
-</html>
+    <!-- Repite **TODO** el bloque anterior para todas semanas/añade custom logging.
