--- a/index.html
+++ b/index.html
@@ -89,10 +89,11 @@
         <p>Escribe y organiza tus contenidos con el calendario interactivo.</p>
     </div>
 
-    <!-- Semana 1 -->
+    <!-- Repetimos el contenido para cada semana -->
     <div class="semana" style="background-color: #cce4f7;">
         <h2>Semana 1</h2>
         <div class="dias">
+            <!-- Bloque común para los días de la semana -->
             <div class="dia"><h3>Lunes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
             <div class="dia"><h3>Martes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
             <div class="dia"><h3>Miércoles</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
@@ -103,12 +104,42 @@
         </div>
     </div>
 
-    <!-- Semana 2 -->
+    <!-- Repite para las semanas 2, 3 y 4 -->
     <div class="semana" style="background-color: #fff7cc;">
         <h2>Semana 2</h2>
         <div class="dias">
-            <!-- Contenido idéntico a Semana 1 -->
+            <!-- Copiar exactamente igual a Semana 1 -->
         </div>
     </div>
 
-    <!-- Repite **TODO** el bloque anterior para todas semanas/añade custom logging.
+    <div class="semana" style="background-color: #d8f7cc;">
+        <h2>Semana 3</h2>
+        <div class="dias">
+            <!-- Copiar exactamente igual a Semana 1 -->
+        </div>
+    </div>
+
+    <div class="semana" style="background-color: #ffe6cc;">
+        <h2>Semana 4</h2>
+        <div class="dias">
+            <!-- Copiar exactamente igual a Semana 1 -->
+        </div>
+    </div>
+
+    <!-- Objetivos Futuros -->
+    <div class="objetivos">
+        <h2>Objetivos Futuros</h2>
+        <input placeholder="1. Escribe aquí">
+        <input placeholder="2. Escribe aquí">
+        <input placeholder="3. Escribe aquí">
+    </div>
+
+    <!-- CTA -->
+    <div class="cta">
+        <h2>¿CAMPO DE JUEGO O MINA DE ORO?</h2>
+        <a href="https://klicana.work/ykEi0H">
+            <button>UNIRME AHORA A MISIÓN GESTOR REDES SOCIALES</button>
+        </a>
+    </div>
+</body>
+</html>
