--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -94,13 +94,69 @@
         <h2>Semana 1</h2>
         <div class="dias">
             <!-- Bloque común para los días de la semana -->
-            <div class="dia"><h3>Lunes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Martes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Miércoles</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Jueves</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Viernes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Sábado</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Domingo</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Lunes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Martes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Miércoles</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Jueves</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Viernes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Sábado</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Domingo</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
         </div>
     </div>
 
@@ -135,6 +191,52 @@
     </div>
 
     <!-- CTA -->
+    <div class="cta">
+        <h2>¿CAMPO DE JUEGO O MINA DE ORO?</h2>
+        <a href="https://klicana.work/ykEi0H">
+            <button>UNIRME AHORA A MISIÓN GESTOR REDES SOCIALES</button>
+        </a>
+    </div>
+</body>
+</html>  <!-- Semana 2 -->
+    <div class="semana">
+        <h2>Semana 2</h2>
+        <div class="dias">
+            <div class="dia"><h3>Lunes</h3><!-- Misma estructura de Semana 1 --></div>
+            <div class="dia"><h3>Martes</h3><!-- Campos idénticos --></div>
+            <div class="dia"><h3>Miércoles</h3><!-- Campos idénticos --></div>
+            <div class="dia"><h3>Jueves</h3><!-- Campos idénticos --></div>
+            <div class="dia"><h3>Viernes</h3><!-- Campos idénticos --></div>
+            <div class="dia"><h3>Sábado</h3><!-- Campos idénticos --></div>
+            <div class="dia"><h3>Domingo</h3><!-- Campos idénticos --></div>
+        </div>
+    </div>
+
+    <!-- Semana 3 -->
+    <div class="semana">
+        <h2>Semana 3</h2>
+        <div class="dias">
+            <!-- Copiar exactamente los mismos días y campos -->
+        </div>
+    </div>
+
+    <!-- Semana 4 -->
+    <div class="semana">
+        <h2>Semana 4</h2>
+        <div class="dias">
+            <!-- Repetir estructura idéntica -->
+        </div>
+    </div>
+
+    <!-- Campos de texto finales -->
+    <div class="objetivos">
+        <h2>Objetivos Futuros</h2>
+        <input placeholder="1. Escribe aquí">
+        <input placeholder="2. Escribe aquí">
+        <input placeholder="3. Escribe aquí">
+    </div>
+
+    <!-- Botón final -->
     <div class="cta">
         <h2>¿CAMPO DE JUEGO O MINA DE ORO?</h2>
         <a href="https://klicana.work/ykEi0H">
