--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -89,126 +89,26 @@
         <p>Escribe y organiza tus contenidos con el calendario interactivo.</p>
     </div>
 
-    <!-- Repetimos el contenido para cada semana -->
-    <div class="semana" style="background-color: #cce4f7;">
+    <!-- Semana 1 -->
+    <div class="semana">
         <h2>Semana 1</h2>
         <div class="dias">
-            <!-- Bloque común para los días de la semana -->
-            <div class="dia"><h3>Lunes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
-
-placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
-
-Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
-
-clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
-
-placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Martes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
-
-placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
-
-Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
-
-clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
-
-placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Miércoles</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
-
-placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
-
-Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
-
-clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
-
-placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Jueves</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
-
-placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
-
-Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
-
-clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
-
-placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Viernes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
-
-placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
-
-Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
-
-clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
-
-placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Sábado</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
-
-placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
-
-Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
-
-clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
-
-placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Domingo</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
-
-placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
-
-Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
-
-clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
-
-placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Lunes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Martes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Miércoles</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Jueves</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Viernes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Sábado</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Domingo</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
         </div>
     </div>
 
-    <!-- Repite para las semanas 2, 3 y 4 -->
-    <div class="semana" style="background-color: #fff7cc;">
-        <h2>Semana 2</h2>
-        <div class="dias">
-            <!-- Copiar exactamente igual a Semana 1 -->
-        </div>
-    </div>
-
-    <div class="semana" style="background-color: #d8f7cc;">
-        <h2>Semana 3</h2>
-        <div class="dias">
-            <!-- Copiar exactamente igual a Semana 1 -->
-        </div>
-    </div>
-
-    <div class="semana" style="background-color: #ffe6cc;">
-        <h2>Semana 4</h2>
-        <div class="dias">
-            <!-- Copiar exactamente igual a Semana 1 -->
-        </div>
-    </div>
-
-    <!-- Objetivos Futuros -->
-    <div class="objetivos">
-        <h2>Objetivos Futuros</h2>
-        <input placeholder="1. Escribe aquí">
-        <input placeholder="2. Escribe aquí">
-        <input placeholder="3. Escribe aquí">
-    </div>
-
-    <!-- CTA -->
-    <div class="cta">
-        <h2>¿CAMPO DE JUEGO O MINA DE ORO?</h2>
-        <a href="https://klicana.work/ykEi0H">
-            <button>UNIRME AHORA A MISIÓN GESTOR REDES SOCIALES</button>
-        </a>
-    </div>
-</body>
-</html>  <!-- Semana 2 -->
+    <!-- Semana 2 -->
     <div class="semana">
         <h2>Semana 2</h2>
         <div class="dias">
-            <div class="dia"><h3>Lunes</h3><!-- Misma estructura de Semana 1 --></div>
-            <div class="dia"><h3>Martes</h3><!-- Campos idénticos --></div>
-            <div class="dia"><h3>Miércoles</h3><!-- Campos idénticos --></div>
-            <div class="dia"><h3>Jueves</h3><!-- Campos idénticos --></div>
-            <div class="dia"><h3>Viernes</h3><!-- Campos idénticos --></div>
-            <div class="dia"><h3>Sábado</h3><!-- Campos idénticos --></div>
-            <div class="dia"><h3>Domingo</h3><!-- Campos idénticos --></div>
+            <!-- Repetir la estructura completa de la Semana 1 -->
+            <!-- Copiar literalmente las columnas de Semana 1 -->
         </div>
     </div>
 
@@ -216,7 +116,7 @@ placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textare
     <div class="semana">
         <h2>Semana 3</h2>
         <div class="dias">
-            <!-- Copiar exactamente los mismos días y campos -->
+            <!-- Repetir la estructura completa de la Semana 1 -->
         </div>
     </div>
 
@@ -224,11 +124,11 @@ placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textare
     <div class="semana">
         <h2>Semana 4</h2>
         <div class="dias">
-            <!-- Repetir estructura idéntica -->
+            <!-- Repetir la estructura completa de la Semana 1 -->
         </div>
     </div>
 
-    <!-- Campos de texto finales -->
+    <!-- Objetivos -->
     <div class="objetivos">
         <h2>Objetivos Futuros</h2>
         <input placeholder="1. Escribe aquí">
@@ -236,7 +136,7 @@ placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textare
         <input placeholder="3. Escribe aquí">
     </div>
 
-    <!-- Botón final -->
+    <!-- Botón -->
     <div class="cta">
         <h2>¿CAMPO DE JUEGO O MINA DE ORO?</h2>
         <a href="https://klicana.work/ykEi0H">
