--- a/index.html
+++ b/index.html
@@ -89,46 +89,100 @@
         <p>Escribe y organiza tus contenidos con el calendario interactivo.</p>
     </div>
 
-    <!-- Semana 1 -->
-    <div class="semana">
+    <!-- Repetimos el contenido para cada semana -->
+    <div class="semana" style="background-color: #cce4f7;">
         <h2>Semana 1</h2>
         <div class="dias">
-            <div class="dia"><h3>Lunes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Martes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Miércoles</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Jueves</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Viernes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Sábado</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
-            <div class="dia"><h3>Domingo</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <!-- Bloque común para los días de la semana -->
+            <div class="dia"><h3>Lunes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Martes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Miércoles</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Jueves</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Viernes</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Sábado</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
+            <div class="dia"><h3>Domingo</h3><input placeholder="Fecha (dd/mm/aaaa)"><textarea 
+
+placeholder="Estado"></textarea><textarea placeholder="Objetivo"></textarea><textarea placeholder="Público 
+
+Objetivo"></textarea><textarea placeholder="Tipo de Contenido"></textarea><textarea placeholder="Palabras 
+
+clave"></textarea><textarea placeholder="Hashtags"></textarea><textarea placeholder="Notas"></textarea><textarea 
+
+placeholder="Formato"></textarea><textarea placeholder="CTA"></textarea><textarea placeholder="Métricas"></textarea></div>
         </div>
     </div>
 
-    <!-- Semana 2 -->
-    <div class="semana">
+    <!-- Repite para las semanas 2, 3 y 4 -->
+    <div class="semana" style="background-color: #fff7cc;">
         <h2>Semana 2</h2>
         <div class="dias">
-            <!-- Repetir la estructura completa de la Semana 1 -->
-            <!-- Copiar literalmente las columnas de Semana 1 -->
+            <!-- Copiar exactamente igual a Semana 1 -->
         </div>
     </div>
 
-    <!-- Semana 3 -->
-    <div class="semana">
+    <div class="semana" style="background-color: #d8f7cc;">
         <h2>Semana 3</h2>
         <div class="dias">
-            <!-- Repetir la estructura completa de la Semana 1 -->
+            <!-- Copiar exactamente igual a Semana 1 -->
         </div>
     </div>
 
-    <!-- Semana 4 -->
-    <div class="semana">
+    <div class="semana" style="background-color: #ffe6cc;">
         <h2>Semana 4</h2>
         <div class="dias">
-            <!-- Repetir la estructura completa de la Semana 1 -->
+            <!-- Copiar exactamente igual a Semana 1 -->
         </div>
     </div>
 
-    <!-- Objetivos -->
+    <!-- Objetivos Futuros -->
     <div class="objetivos">
         <h2>Objetivos Futuros</h2>
         <input placeholder="1. Escribe aquí">
@@ -136,7 +190,7 @@
         <input placeholder="3. Escribe aquí">
     </div>
 
-    <!-- Botón -->
+    <!-- CTA -->
     <div class="cta">
         <h2>¿CAMPO DE JUEGO O MINA DE ORO?</h2>
         <a href="https://klicana.work/ykEi0H">
